/**
* Generated by go-doudou v2.1.1.
* Don't edit!
*
* Version No.: v20230521
*/
syntax = "proto3";

package testfffgrom;
option go_package = "testfffgrom/transport/grpc";

import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";


message DeleteTAuthorIdRpcRequest {
  int32 id = 1 [json_name="id"];
}

message DeleteTClientIdRpcRequest {
  int32 id = 1 [json_name="id"];
}

message DeleteTDeptIdRpcRequest {
  int32 id = 1 [json_name="id"];
}

message DeleteTInvalidTokenIdRpcRequest {
  int32 id = 1 [json_name="id"];
}

message DeleteTJjjIdRpcRequest {
  int32 id = 1 [json_name="id"];
}

message DeleteTPostIdRpcRequest {
  int32 id = 1 [json_name="id"];
}

message DeleteTUserIdRpcRequest {
  int32 id = 1 [json_name="id"];
}

message DeleteTWordCloudTaskIdRpcRequest {
  int32 id = 1 [json_name="id"];
}

message GetTAuthorIdRpcRequest {
  int32 id = 1 [json_name="id"];
}

message GetTClientIdRpcRequest {
  int32 id = 1 [json_name="id"];
}

message GetTDeptIdRpcRequest {
  int32 id = 1 [json_name="id"];
}

message GetTInvalidTokenIdRpcRequest {
  int32 id = 1 [json_name="id"];
}

message GetTJjjIdRpcRequest {
  int32 id = 1 [json_name="id"];
}

message GetTPostIdRpcRequest {
  int32 id = 1 [json_name="id"];
}

message GetTUserIdRpcRequest {
  int32 id = 1 [json_name="id"];
}

message GetTWordCloudTaskIdRpcRequest {
  int32 id = 1 [json_name="id"];
}

// Page result wrapper
message Page {
  repeated google.protobuf.Any items = 1 [json_name="items"];
  int64 page = 2 [json_name="page"];
  int64 size = 3 [json_name="size"];
  int64 maxPage = 4 [json_name="maxPage"];
  int64 totalPages = 5 [json_name="totalPages"];
  int64 total = 6 [json_name="total"];
  bool last = 7 [json_name="last"];
  bool first = 8 [json_name="first"];
  int64 visible = 9 [json_name="visible"];
}

// Parameter struct
message Parameter {
  string page = 1 [json_name="page"];
  string size = 2 [json_name="size"];
  string sort = 3 [json_name="sort"];
  string order = 4 [json_name="order"];
  string fields = 5 [json_name="fields"];
  repeated google.protobuf.Any filters = 6 [json_name="filters"];
}

message PostTAuthorRpcResponse {
  int32 data = 1 [json_name="data"];
}

message PostTClientRpcResponse {
  int32 data = 1 [json_name="data"];
}

message PostTDeptRpcResponse {
  int32 data = 1 [json_name="data"];
}

message PostTInvalidTokenRpcResponse {
  int32 data = 1 [json_name="data"];
}

message PostTJjjRpcResponse {
  int32 data = 1 [json_name="data"];
}

message PostTPostRpcResponse {
  int32 data = 1 [json_name="data"];
}

message PostTUserRpcResponse {
  int32 data = 1 [json_name="data"];
}

message PostTWordCloudTaskRpcResponse {
  int32 data = 1 [json_name="data"];
}

// TAuthor mapped from table <t_author>
message TAuthor {
  int32 id = 1 [json_name="id"];
  string book = 2 [json_name="book"];
  string deleteAt = 3 [json_name="deleteAt"];
}

// TClient mapped from table <t_client>
message TClient {
  int32 id = 1 [json_name="id"];
  string name = 2 [json_name="name"];
  string publicKey = 3 [json_name="publicKey"];
  string encryptedSecret = 4 [json_name="encryptedSecret"];
  string createAt = 5 [json_name="createAt"];
  string updateAt = 6 [json_name="updateAt"];
  string deleteAt = 7 [json_name="deleteAt"];
}

// TDept mapped from table <t_dept>
message TDept {
  int32 id = 1 [json_name="id"];
  string name = 2 [json_name="name"];
  string deletedAt = 3 [json_name="deletedAt"];
}

// TInvalidToken mapped from table <t_invalid_token>
message TInvalidToken {
  int32 id = 1 [json_name="id"];
  string token = 2 [json_name="token"];
  string expireAt = 3 [json_name="expireAt"];
  string createAt = 4 [json_name="createAt"];
  string updateAt = 5 [json_name="updateAt"];
  string deleteAt = 6 [json_name="deleteAt"];
}

// TJjj mapped from table <t_jjj>
message TJjj {
  int32 id = 1 [json_name="id"];
  string jobName = 2 [json_name="jobName"];
  string deletedAt = 3 [json_name="deletedAt"];
}

// TPost mapped from table <t_post>
message TPost {
  int32 id = 1 [json_name="id"];
  string title = 2 [json_name="title"];
  string deleteAt = 3 [json_name="deleteAt"];
}

// TUser mapped from table <t_user>
message TUser {
  int32 id = 1 [json_name="id"];
  string username = 2 [json_name="username"];
  string password = 3 [json_name="password"];
  string name = 4 [json_name="name"];
  string phone = 5 [json_name="phone"];
  string dept = 6 [json_name="dept"];
  string avatar = 7 [json_name="avatar"];
  string createAt = 8 [json_name="createAt"];
  string updateAt = 9 [json_name="updateAt"];
  string deleteAt = 10 [json_name="deleteAt"];
}

// TWordCloudTask mapped from table <t_word_cloud_task>
message TWordCloudTask {
  int32 id = 1 [json_name="id"];
  string srcURL = 2 [json_name="srcURL"];
  string imgURL = 3 [json_name="imgURL"];
  string lang = 4 [json_name="lang"];
  int32 top = 5 [json_name="top"];
  int32 status = 6 [json_name="status"];
  string error = 7 [json_name="error"];
  int32 userID = 8 [json_name="userID"];
  string createAt = 9 [json_name="createAt"];
  string updateAt = 10 [json_name="updateAt"];
  string deleteAt = 11 [json_name="deleteAt"];
}

message User {
  int32 id = 1 [json_name="id"];
  string name = 2 [json_name="name"];
  string phone = 3 [json_name="phone"];
  string dept = 4 [json_name="dept"];
}

service TestfffgromService {
  // PostTAuthor mapped from table <t_author>
// Code generated by gorm.io/gen for go-doudou. DO NOT EDIT.
  rpc PostTAuthorRpc(TAuthor) returns (PostTAuthorRpcResponse);
  // GetTAuthor_Id mapped from table <t_author>
// Code generated by gorm.io/gen for go-doudou. DO NOT EDIT.
  rpc GetTAuthorIdRpc(GetTAuthorIdRpcRequest) returns (TAuthor);
  // PutTAuthor mapped from table <t_author>
// Code generated by gorm.io/gen for go-doudou. DO NOT EDIT.
  rpc PutTAuthorRpc(TAuthor) returns (google.protobuf.Empty);
  // DeleteTAuthor_Id mapped from table <t_author>
// Code generated by gorm.io/gen for go-doudou. DO NOT EDIT.
  rpc DeleteTAuthorIdRpc(DeleteTAuthorIdRpcRequest) returns (google.protobuf.Empty);
  // GetTAuthors mapped from table <t_author>
// Code generated by gorm.io/gen for go-doudou. DO NOT EDIT.
  rpc GetTAuthorsRpc(Parameter) returns (Page);
  // PostTClient mapped from table <t_client>
// Code generated by gorm.io/gen for go-doudou. DO NOT EDIT.
  rpc PostTClientRpc(TClient) returns (PostTClientRpcResponse);
  // GetTClient_Id mapped from table <t_client>
// Code generated by gorm.io/gen for go-doudou. DO NOT EDIT.
  rpc GetTClientIdRpc(GetTClientIdRpcRequest) returns (TClient);
  // PutTClient mapped from table <t_client>
// Code generated by gorm.io/gen for go-doudou. DO NOT EDIT.
  rpc PutTClientRpc(TClient) returns (google.protobuf.Empty);
  // DeleteTClient_Id mapped from table <t_client>
// Code generated by gorm.io/gen for go-doudou. DO NOT EDIT.
  rpc DeleteTClientIdRpc(DeleteTClientIdRpcRequest) returns (google.protobuf.Empty);
  // GetTClients mapped from table <t_client>
// Code generated by gorm.io/gen for go-doudou. DO NOT EDIT.
  rpc GetTClientsRpc(Parameter) returns (Page);
  // PostTDept mapped from table <t_dept>
// Code generated by gorm.io/gen for go-doudou. DO NOT EDIT.
  rpc PostTDeptRpc(TDept) returns (PostTDeptRpcResponse);
  // GetTDept_Id mapped from table <t_dept>
// Code generated by gorm.io/gen for go-doudou. DO NOT EDIT.
  rpc GetTDeptIdRpc(GetTDeptIdRpcRequest) returns (TDept);
  // PutTDept mapped from table <t_dept>
// Code generated by gorm.io/gen for go-doudou. DO NOT EDIT.
  rpc PutTDeptRpc(TDept) returns (google.protobuf.Empty);
  // DeleteTDept_Id mapped from table <t_dept>
// Code generated by gorm.io/gen for go-doudou. DO NOT EDIT.
  rpc DeleteTDeptIdRpc(DeleteTDeptIdRpcRequest) returns (google.protobuf.Empty);
  // GetTDepts mapped from table <t_dept>
// Code generated by gorm.io/gen for go-doudou. DO NOT EDIT.
  rpc GetTDeptsRpc(Parameter) returns (Page);
  // PostTInvalidToken mapped from table <t_invalid_token>
// Code generated by gorm.io/gen for go-doudou. DO NOT EDIT.
  rpc PostTInvalidTokenRpc(TInvalidToken) returns (PostTInvalidTokenRpcResponse);
  // GetTInvalidToken_Id mapped from table <t_invalid_token>
// Code generated by gorm.io/gen for go-doudou. DO NOT EDIT.
  rpc GetTInvalidTokenIdRpc(GetTInvalidTokenIdRpcRequest) returns (TInvalidToken);
  // PutTInvalidToken mapped from table <t_invalid_token>
// Code generated by gorm.io/gen for go-doudou. DO NOT EDIT.
  rpc PutTInvalidTokenRpc(TInvalidToken) returns (google.protobuf.Empty);
  // DeleteTInvalidToken_Id mapped from table <t_invalid_token>
// Code generated by gorm.io/gen for go-doudou. DO NOT EDIT.
  rpc DeleteTInvalidTokenIdRpc(DeleteTInvalidTokenIdRpcRequest) returns (google.protobuf.Empty);
  // GetTInvalidTokens mapped from table <t_invalid_token>
// Code generated by gorm.io/gen for go-doudou. DO NOT EDIT.
  rpc GetTInvalidTokensRpc(Parameter) returns (Page);
  // PostTPost mapped from table <t_post>
// Code generated by gorm.io/gen for go-doudou. DO NOT EDIT.
  rpc PostTPostRpc(TPost) returns (PostTPostRpcResponse);
  // GetTPost_Id mapped from table <t_post>
// Code generated by gorm.io/gen for go-doudou. DO NOT EDIT.
  rpc GetTPostIdRpc(GetTPostIdRpcRequest) returns (TPost);
  // PutTPost mapped from table <t_post>
// Code generated by gorm.io/gen for go-doudou. DO NOT EDIT.
  rpc PutTPostRpc(TPost) returns (google.protobuf.Empty);
  // DeleteTPost_Id mapped from table <t_post>
// Code generated by gorm.io/gen for go-doudou. DO NOT EDIT.
  rpc DeleteTPostIdRpc(DeleteTPostIdRpcRequest) returns (google.protobuf.Empty);
  // GetTPosts mapped from table <t_post>
// Code generated by gorm.io/gen for go-doudou. DO NOT EDIT.
  rpc GetTPostsRpc(Parameter) returns (Page);
  // PostTUser mapped from table <t_user>
// Code generated by gorm.io/gen for go-doudou. DO NOT EDIT.
  rpc PostTUserRpc(TUser) returns (PostTUserRpcResponse);
  // GetTUser_Id mapped from table <t_user>
// Code generated by gorm.io/gen for go-doudou. DO NOT EDIT.
  rpc GetTUserIdRpc(GetTUserIdRpcRequest) returns (TUser);
  // PutTUser mapped from table <t_user>
// Code generated by gorm.io/gen for go-doudou. DO NOT EDIT.
  rpc PutTUserRpc(TUser) returns (google.protobuf.Empty);
  // DeleteTUser_Id mapped from table <t_user>
// Code generated by gorm.io/gen for go-doudou. DO NOT EDIT.
  rpc DeleteTUserIdRpc(DeleteTUserIdRpcRequest) returns (google.protobuf.Empty);
  // GetTUsers mapped from table <t_user>
// Code generated by gorm.io/gen for go-doudou. DO NOT EDIT.
  rpc GetTUsersRpc(Parameter) returns (Page);
  // PostTWordCloudTask mapped from table <t_word_cloud_task>
// Code generated by gorm.io/gen for go-doudou. DO NOT EDIT.
  rpc PostTWordCloudTaskRpc(TWordCloudTask) returns (PostTWordCloudTaskRpcResponse);
  // GetTWordCloudTask_Id mapped from table <t_word_cloud_task>
// Code generated by gorm.io/gen for go-doudou. DO NOT EDIT.
  rpc GetTWordCloudTaskIdRpc(GetTWordCloudTaskIdRpcRequest) returns (TWordCloudTask);
  // PutTWordCloudTask mapped from table <t_word_cloud_task>
// Code generated by gorm.io/gen for go-doudou. DO NOT EDIT.
  rpc PutTWordCloudTaskRpc(TWordCloudTask) returns (google.protobuf.Empty);
  // DeleteTWordCloudTask_Id mapped from table <t_word_cloud_task>
// Code generated by gorm.io/gen for go-doudou. DO NOT EDIT.
  rpc DeleteTWordCloudTaskIdRpc(DeleteTWordCloudTaskIdRpcRequest) returns (google.protobuf.Empty);
  // GetTWordCloudTasks mapped from table <t_word_cloud_task>
// Code generated by gorm.io/gen for go-doudou. DO NOT EDIT.
  rpc GetTWordCloudTasksRpc(Parameter) returns (Page);
  // PostTJjj mapped from table <t_jjj>
// Code generated by gorm.io/gen for go-doudou. DO NOT EDIT.
  rpc PostTJjjRpc(TJjj) returns (PostTJjjRpcResponse);
  // GetTJjj_Id mapped from table <t_jjj>
// Code generated by gorm.io/gen for go-doudou. DO NOT EDIT.
  rpc GetTJjjIdRpc(GetTJjjIdRpcRequest) returns (TJjj);
  // PutTJjj mapped from table <t_jjj>
// Code generated by gorm.io/gen for go-doudou. DO NOT EDIT.
  rpc PutTJjjRpc(TJjj) returns (google.protobuf.Empty);
  // DeleteTJjj_Id mapped from table <t_jjj>
// Code generated by gorm.io/gen for go-doudou. DO NOT EDIT.
  rpc DeleteTJjjIdRpc(DeleteTJjjIdRpcRequest) returns (google.protobuf.Empty);
  // GetTJjjs mapped from table <t_jjj>
// Code generated by gorm.io/gen for go-doudou. DO NOT EDIT.
  rpc GetTJjjsRpc(Parameter) returns (Page);
}
